<resources>
    <string name="app_name">Big Brain Timer</string>
    <string name="cancel">Abbrechen</string>
    <string name="start">Start</string>
    <string name="level">Level : 0</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="dialog_title">Set timer</string>
    <string name="new_timer">New Timer</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="timer">Timer</string>
    <string name="skins">Skins</string>
    <string name="lernzeit">Anzahl der Lerneinheiten:</string>
    <string name="pause_count">Länge der Pausen:</string>
    <string name="phase_length">Länge der Lerneinheiten:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partnerprojekte">Diese App von Team 5-Kopf entstand während eines Studiums an der Hochschule Kaiserslautern am Standort Zweibrücken. Im Zuge der Veranstaltung Projektmanagement in der Software-Entwicklung haben wir uns mit anderen Teams zusammengeschlossen und zeigen euch hier ihre Projekte.</string>
    <string name="zockbr">Der Discord Server von Zockbrücken, dem eSport Projekt der Hochschule Kaiserslautern am Standort Zweibrücken: \nhttps://discord.gg/YHwVE8U2a9</string>
    <string name="maschine">Das Team Die Maschine stellt eine Website für die Studierenden der Hochschule Kaiserslautern bereit, auf der sie sich über Hobbys und Interessen austauschen können, um das Campusfeeling online abzubilden. \nhttps://campusfeeling.online/login</string>
    <string name="dalta">DaltaJ hat ein paar gute Hilfestellungen parat, falls es ums Lernen geht. Schaut hier mal vorbei und stöbert durch Ihren Guide zur Pomodoro-Technik.\nPS: Ihr braucht einen Account bei Campusfeeling (Team Die Maschine). \nhttps://campusfeeling.online/c/guides/15</string>
    <string name="disclaimer">Wir haften nicht für Schäden und Folgeschäden, welche durch die Installation, oder das Ausführen der App auftreten können.\n \n
Auf die Inhalte externer Links haben wir keinen Einfluss. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend, in Form einer neuen Version entfernen.</string>
    <string name="iconsV">Diese App verwendet die Material Icons von Google. \nhttps://fonts.google.com/icons</string>
    <string name="info_box_info">Hier stellst du ein, wie lange deine Lerneinheiten sein sollen. Generell wird empfohlen Lerneinheiten von etwa 25 min zu haben. Mehr Informationen zu den Lernmethoden, oder zu der Pomodoro-Technik findest du unter: https://campusfeeling.online/t/distanzlernen-verbessern-lernmethoden/94\n(die Webseite ist nur für Studenten der Hochschule Kaiserslautern nach Erstellen eines Kontos aufrufbar)</string>
    <string name="info_box_info2">Hier stellst du ein, wie lange deine Pausen sein sollen. Generell wird empfohlen Pausen von etwa 5 min zu haben. Mehr Informationen zu den Lernmethoden, oder zu der Pomodoro-Technik findest du unter: https://campusfeeling.online/t/distanzlernen-verbessern-lernmethoden/94\n(die Webseite ist nur für Studenten der Hochschule Kaiserslautern nach Erstellen eines Kontos aufrufbar)</string>
    <string name="welcome">Willkommen zum Big Brain Timer\n\nIn dieser App kannst du dir einen Lerntimer stellen und dabei auch noch coole Skins freischalten, mit denen du deinen Avatar verändern kannst.\n\nSammel sie alle!</string>
    <string name="homeWelcome">Auf dem Homescreen siehst du deinen aktuellen Level-Fortschritt und deinen eigenen Avatar.</string>
    <string name="timerWelcome">Hier stellst du den Timer. Du kannst bestimmen, wie lange deine Lernphasen und Pausen sind und wie viele Lernphasen du absolvieren möchtest.</string>
    <string name="garderobeWelcome">In der Garderobe findest du deine freigeschalteten Skins. Alle 10 Level schaltest du einen neuen Skin frei.</string>
    <string name="infoWelcome">Hier findest du unser Impressum, in dem wir auf vor allem auf interessante Partnerprojekte verweisen.</string>
</resources>